# perfmode

./: Cargo.toml  README.md  default.nix  flake.nix
src/: cli.rs  driver.rs  error.rs  main.rs  operations.rs
