[package]
name = "perfmode"
version = "0.1.2"
edition = "2021"
categories = ["command-line-utilities", "hardware-support", "config", "accessibility", "no-std"]
description = "Fan/Performance Control for ASUS TUF Gaming laptops"
documentation = "https://github.com/falcon71181/perfmode/blob/main/README.md"
readme = "README.md"
authors = ["falcon71181"]
keywords = ["cli", "asus", "tuf", "fan-control", "fan"]
repository = "https://github.com/falcon71181/perfmode"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size
